samples/_failures_safe/1760884816_02f7bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5ea8627.c: In function ‘main’:
./samples/SAFE/__tmp_f5ea8627.c:130:26: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  130 |     if (input_len > 0 && input
      |                          ^~~~~
      |                          int
./samples/SAFE/__tmp_f5ea8627.c:130:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f5ea8627.c:130:31: error: expected ‘)’ at end of input
  130 |     if (input_len > 0 && input
      |        ~                      ^
      |                               )
./samples/SAFE/__tmp_f5ea8627.c:130:5: error: expected declaration or statement at end of input
  130 |     if (input_len > 0 && input
      |     ^~
